<resources>
    <string name="app_name">技术分享</string>
    <!--登陆-->
    <string name="login_accound_title">账号登录</string>
    <string name="login_code_title">验证码登录</string>
    <string name="login_register_title">账号注册</string>
    <string name="login_social_title">使用社交账号登录</string>
    <string name="register_accound_hint">手机/邮箱</string>
    <string name="register_psw_hint">请输入密码</string>
    <string name="register_psw_confirm_hint">确定密码</string>
    <string name="login_accound_hint">请输入账号</string>
    <string name="login_psw_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_code_phone">请输入手机号</string>
    <string name="login_code">请输入验证码</string>
    <string name="code_get">获取验证码</string>
    <string name="login_out">退出登录</string>
    <string name="login_accound_error_tips">用户名不能为空</string>
    <string name="login_psw_error_tips">密码不能为空</string>

    <!--Main Bottom-->
    <string name="main_categories">公众号</string>
    <string name="main_home">首页</string>
    <string name="main_pinpai">体系</string>
    <string name="main_community">社区</string>
    <string name="main_user_center">个人中心</string>

    <!-- Home -->
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect_success">已取消收藏</string>
    <string name="new_fresh">新</string>
    <string name="top_tip">置顶</string>
    <string name="action_search">搜索</string>
    <string name="tip_double_click_exit">再次点击退出</string>
    <string name="collecl_failed">收藏失败</string>
    <string name="cancel_collecl_failed">取消收藏失败</string>
    <string name="collecl_success">收藏成功</string>
    <string name="cancel_collecl_success">取消收藏成功</string>
    <string name="search">Search</string>
    <string name="search_key">请输入关键字..</string>
    <string name="searc_hot">热门搜索</string>
    <string name="searc_history">搜索历史</string>
    <string name="delete_history">全部清空</string>
</resources>
