<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.design.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/act_main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.AppBarLayout>

        <com.ancely.share.views.banner.CustomViewpager
            android:id="@+id/act_main_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/act_main_floating_action_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            app:layout_behavior="com.ancely.share.views.ScaleDownShowBehavior"
            app:srcCompat="@drawable/ic_arrow_upward_white_24dp"
            tools:ignore="VectorDrawableCompat"/>

    </android.support.design.widget.CoordinatorLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_999999"/>

    <LinearLayout
        android:id="@+id/act_main_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <com.ancely.share.views.BottomView
            android:id="@+id/act_main_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:bvIcon="@drawable/ic_home_black_24dp"
            app:bvText="@string/main_home"/>

        <com.ancely.share.views.BottomView
            android:id="@+id/act_main_categories"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:bvIcon="@drawable/ic_wechat_black_24dp"
            app:bvText="@string/main_categories"/>

        <com.ancely.share.views.BottomView
            android:id="@+id/act_main_pinpai"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:bvIcon="@drawable/ic_apps_black_24dp"
            app:bvText="@string/main_pinpai"/>

        <com.ancely.share.views.BottomView
            android:id="@+id/act_main_community"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:bvIcon="@drawable/ic_project_black_24dp"
            app:bvText="@string/main_community"/>

        <com.ancely.share.views.BottomView
            android:id="@+id/act_main_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:bvIcon="@drawable/ic_user_center"
            app:bvText="@string/main_user_center"/>

    </LinearLayout>
</LinearLayout>
